--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ body {font-family: Arial;}
 </head>
 <body>
     <div class="iframe-container">
-        <iframe src="https://vivcheb.github.io/resume.github.io/" frameborder="1"></iframe>
+        <iframe src="Vivian Chen - College Resume Freshman Yr Sm2.pdf" frameborder="1"></iframe>
     </div>
 </body>
 </div>
