--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body {font-family: Arial;}
 }
 
 /* Make the first tab content visible initially */
-#Resume {
+#VivianChen {
   display: block;
 }
 </style>
@@ -71,7 +71,7 @@ body {font-family: Arial;}
 </div>
 
 <div id="Gallery" class="tabcontent">
-  <h3>Work In Progress!</h3> 
+  <p>Work In Progress!</p> 
 </div>
 
 <div id="About" class="tabcontent">
