--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <div id="VivianChen" class="tabcontent"> 
   <h3>[...]</h3>
    <div class="vivian-chen-image">
-    <img src="your-image-path.jpg" alt="Photo of Vivian Chen"> <!-- Replace with your image URL -->
+    <img src="Vivianpfp.jpg" alt="Photo of Vivian Chen"> <!-- replace image of self -->
    <div class="vivian-chen-text">
   <p>[...]</p>
 </div>
