--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   <h3>[...]</h3>
    <div class="vivian-chen-image">
     <img src="Vivianpfp.jpg" alt="Photo of Vivian Chen"> <!-- replace image of self -->
-   <div class="vivian-chen-text">
+   <div> class="vivian-chen-text"> <div>
   <p>[...]</p>
 </div>
 
