--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
   <h3>[...]</h3>
    <div class="vivian-chen-image">
     <img src="Vivianpfp.jpg" alt="Photo of Vivian Chen"> <!-- replace image of self -->
-   <div> class="vivian-chen-text"> <div>
-  <p>[...]</p>
+   <div class="vivian-chen-text">
+    <p>[...]</p>
 </div>
 
 <script>
