--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
 
 <!-- vivian tab-->
 <div id="VivianChen" class="tabcontent"> 
-  <h3>[...]</h3>
    <div class="vivian-chen-image">
     <img src="Vivianpfp.jpg" alt="Photo of Vivian Chen"> <!-- replace image of self -->
    <div class="vivian-chen-text">
-    <p>[...]</p>
+    <h3>Hi I'm Vivian Chen!</h3>
+    <p>I am a first-year mechanical engineering student at Boston University interested in material science and robotics!</p>
 </div>
 
 <script>
